# GEANE-Tracking-Code-Personal

./: .gitignore  Complete.sublime-workspace  README.md  careyerrprop.cc
Extras/: BasicDetectorConstruction-copytest.hh  BasicDetectorContruction-XYZCopy.cc  BasicTrackerSD - before rearranging A.cc  G4ErrorSurfaceTrajState - with some changes.cc  errprop - XYZcopy.cc  errprop YZ working latest.cc  errprop orthonormal working - before YZtoUV Jacobian.cc  errprop zeros for residuals.cc  errprop-backup-older.cc
source/: #basic.cc#  CMakeLists.txt  basic.cc  errprop - banded inversion attempt.cc  errprop - before Jacobian deltaTrack.cc  errprop - before full covariance.cc  errprop.cc  geaneTrackingArt.cc
source/include/: BasicActionInitialization.hh  BasicDetectorConstruction.hh  BasicEventAction.hh  BasicMagneticField.hh  BasicPrimaryGeneratorAction.hh  BasicRunAction.hh  BasicTrackerHit.hh  BasicTrackerSD.hh  HistoManager.hh  MyParallelWorld.hh  RootInput.hh
source/src/: BasicActionInitialization.cc  BasicDetectorContruction.cc  BasicEventAction.cc  BasicMagneticField.cc  BasicPrimaryGeneratorAction.cc  BasicRunAction.cc  BasicTrackerHit.cc  BasicTrackerSD.cc  HistoManager.cc  MyParallelWorld.cc  RootInput.cc
